ws: Add InputMethodMus plumbing for ShowVirtualKeyboardIfEnabled

TODO: Get the keyboard to close when closing the KSV window.

Bug: 876589
Test: a11y virtual keyboard shows on second KSV textfield click.
Change-Id: I57a09acb9cf8b784a9c40763028c4733dd43d474
Reviewed-on: https://chromium-review.googlesource.com/1185736
Commit-Queue: Michael Wasserman <msw@chromium.org>
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585418}
Former-commit-id: d10527cab466ac073da1c572a63b2a34d59015ef